test_suite/alan-2022-examples/failing/008910_mutation.alan
source x function S(boolean B[) begin relax end begin relax end
